# deathbycaptcha-api-client-c11

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci-32bit.yml  ci-embedded.yml  ci.yml  coverage-badge.yml  coverage.yml  release-cli.yml  test-linux.yml  test-macos.yml  test-windows.yml
doc/: BUILD.md  CLI.md  EXAMPLES.md  LIBRARY.md  lib_usage_https_example.c  lib_usage_socket_example.c
examples/: example.Amazon_Waf.c  example.Atb.c  example.Audio.c  example.Capy.c  example.Cutcaptcha.c  example.Datadome.c  example.Friendly.c  example.Geetest_v3.c  example.Geetest_v4.c  example.Lemin.c  example.Mtcaptcha.c  example.Normal_Captcha.c  example.Siara.c  example.Tencent.c  example.Textcaptcha.c  example.Turnstile.c  example.reCAPTCHA_Coordinates.c  example.reCAPTCHA_Image_Group.c  example.reCAPTCHA_v2.c  example.reCAPTCHA_v2_Enterprise.c  example.reCAPTCHA_v3.c  get_balance.c
ports/esp-idf-smoke/: CMakeLists.txt
ports/esp-idf-smoke/components/dbc/: CMakeLists.txt
ports/esp-idf-smoke/main/: CMakeLists.txt  main.c
src/: client.c  deathbycaptcha.c  deathbycaptcha.h
tests/: cli_coverage_harness.c  deathbycaptcha_coverage_harness.c  deathbycaptcha_tests.c  integration_cli_test.sh
tests/fake_curl/curl/: curl.h
